Fix wrapping nav on iPhone

--- a/css/app.css
+++ b/css/app.css
@@ -363,12 +363,12 @@ img { max-width: 100% }
     #logo {
         font-size: 24pt;
         line-height: 24px;
-        margin-right: 3%;
+        margin-right: 2%;
     }
 
     nav a, nav a:visited {
         margin: 0px;
-        margin-left: 1%;
-        margin-right: 1%;
-        font-size: 12pt;
+        margin-left: 0.5%;
+        margin-right: 0.5%;
+        font-size: 11pt;
     };
